# cli-file-processor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/cli_file_processor/: api.py  cli.py  config.py  exceptions.py  logging_config.py  main.py  output.py
src/cli_file_processor/core/: models.py  processor.py  scanner.py  timer.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_processor.py  test_scanner.py  test_timer.py
