[project]
name = "cli-file-processor"
version = "0.1.0"
description = "Production-style CLI tool for file processing"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

# Зависимости только для разработки — не нужны обычному пользователю инструмента.
# [project.optional-dependencies] позволяет разделить: pip install . vs pip install .[dev]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
cli-file-processor = "cli_file_processor.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
